--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -67,13 +67,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
         </ScrollView>
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_group_plan_add"
-            android:backgroundTint="@color/colorBlurBottomMenu"
-            android:background="@drawable/ic_add_circle_outline_black_24dp"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:src="@drawable/ic_add_black_24dp"
+            android:tint="#ffffff"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:elevation="6dp"
+            app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
