--- a/app/src/main/res/layout/activity_group_plan_add.xml
+++ b/app/src/main/res/layout/activity_group_plan_add.xml
@@ -46,16 +46,19 @@
                 android:textAlignment="center"
                 android:textSize="20dp"/>
             <DatePicker
+                android:id="@+id/plan_add_startDate"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:calendarViewShown="false"
                 android:datePickerMode="spinner"/>
             <TimePicker
+                android:id="@+id/plan_add_startTime"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:timePickerMode="spinner"/>
 
             <EditText
+                android:id="@+id/plan_add_title"
                 android:hint="일정 이름"
                 android:layout_margin="15dp"
                 android:layout_width="match_parent"
@@ -63,12 +66,14 @@
                 android:textSize="20dp"/>
 
             <Spinner
+                android:id="@+id/plan_add_type"
                 android:entries="@array/아이콘"
                 android:layout_margin="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <EditText
+                android:id="@+id/plan_add_info"
                 android:hint="정보"
                 android:layout_margin="15dp"
                 android:layout_width="match_parent"
@@ -76,11 +81,12 @@
                 android:textSize="20dp"/>
 
             <EditText
-                android:hint="코멘트"
-                android:layout_margin="15dp"
+                android:id="@+id/plan_add_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"/>
+                android:layout_margin="15dp"
+                android:hint="코멘트"
+                android:textSize="20dp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
