--- a/app/src/main/res/layout/chatbox_me.xml
+++ b/app/src/main/res/layout/chatbox_me.xml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="right"
+    android:layout_marginLeft="64dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
+        android:id="@+id/tv_checkbox_me_message"
         android:paddingHorizontal="20dp"
         android:paddingVertical="10dp"
         android:background="@drawable/chatbox_me_style"
-        android:text="gfgd fdg re fdg dgfd gfdg dsg gdfg\ngfdggfd gfd"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/tv_checkbox_me_date"
         android:layout_margin="5dp"
-        android:text="2020년 4월 24일  13시 32분"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
