--- a/app/src/main/res/layout/chatbox_others.xml
+++ b/app/src/main/res/layout/chatbox_others.xml
@@ -2,23 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="left"
+    android:layout_marginRight="64dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
+        android:id="@+id/tv_checkbox_others_nickname"
         android:layout_margin="5dp"
         android:text="닉네임"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/tv_checkbox_others_message"
         android:paddingHorizontal="20dp"
         android:paddingVertical="10dp"
         android:background="@drawable/chatbox_others_style"
-        android:text="gfgd fdg re fdg dgfd gfdg dsg gdfg\ngfdggfd gfd"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/tv_checkbox_others_date"
         android:layout_margin="5dp"
-        android:text="2020년 4월 24일  13시 32분"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
