--- a/app/src/main/res/layout/item_all_plan_list.xml
+++ b/app/src/main/res/layout/item_all_plan_list.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/all_plan_list_title"
-        android:text="12월 24일"
-        android:textSize="20dp"
-        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:text="12월 24일"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <RelativeLayout
         android:id="@+id/all_plan_list_line"
         android:layout_width="match_parent"
@@ -20,12 +22,13 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="#DDDDDD"
-        app:layout_constraintTop_toBottomOf="@+id/all_plan_list_title"
-        app:layout_constraintLeft_toLeftOf="parent">
-    </RelativeLayout>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/all_plan_list_title"></RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/all_plan_listView"
+        android:id="@+id/recyclerView_plan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/all_plan_list_line"/>
+        android:paddingHorizontal="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/all_plan_list_line" />
 </androidx.constraintlayout.widget.ConstraintLayout>
