--- a/app/src/main/res/layout/item_plan_list.xml
+++ b/app/src/main/res/layout/item_plan_list.xml
@@ -2,16 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="15dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/plan_list_layout1"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="40dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/plan_list_const1"
@@ -51,7 +48,7 @@
             android:layout_toRightOf="@+id/plan_list_const1"
             android:gravity="center"
             android:text="비행기"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <Button
             android:id="@+id/plan_list_option_button"
@@ -89,7 +86,7 @@
                 android:src="@drawable/ic_info_black_24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/plan_list_info_text"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/plan_list_info_text"
@@ -99,8 +96,8 @@
                 android:lineSpacingExtra="8sp"
                 android:text="11시간 소요안녀여여여영여여여여영여여여영여여여여여영여여여여여여여"
                 app:layout_constraintLeft_toRightOf="@+id/plan_list_info"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -123,8 +120,8 @@
                 android:layout_marginLeft="10dp"
                 android:text="게이트에서 버스타고 호텔로 출발"
                 app:layout_constraintLeft_toRightOf="@+id/plan_list_comment"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
