채팅 리사이클뷰로 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorBlurBottomMenu">#999999</color>
 
     <color name="colorTopNavigationBack">#CCC</color>
+    <color name="colorMessageOthers">#DDEEFF</color>
+    <color name="colorMessageMe">#4499FF</color>
 </resources>
