--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.GroupChatActivity">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingHorizontal="20dp"
         android:paddingVertical="15dp"
@@ -31,6 +33,7 @@
             android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ScrollView
+        android:visibility="gone"
         android:id="@+id/scroll_group_chat"
         android:layout_weight="1"
         android:layout_width="match_parent"
@@ -43,6 +46,11 @@
         </LinearLayout>
     </ScrollView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_group_chat"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,4 +71,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"/>
     </LinearLayout>
+
+
+
 </LinearLayout>
