--- a/app/src/main/res/layout/recycler_item_chat_message.xml
+++ b/app/src/main/res/layout/recycler_item_chat_message.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_marginVertical="5dp"
+        android:layout_marginBottom="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
@@ -30,8 +30,8 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/tv_message_text"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="15dp"
+        android:paddingHorizontal="14dp"
+        android:paddingVertical="8dp"
         android:background="@drawable/message_box_style"
         android:backgroundTint="@color/colorMessageOthers"
         android:text="테스트 메세지입 테스트 메세테스트 메세지입니다 테스트 메세지입니다 메세지입니다"
