--- a/app/src/main/res/layout/activity_group_setting.xml
+++ b/app/src/main/res/layout/activity_group_setting.xml
@@ -2,132 +2,146 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.GroupSettingActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/colorTopNavigationBack"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorTopNavigationBack">
+
         <Button
             android:id="@+id/button_group_setting_back"
-            android:backgroundTint="@color/colorFocusBottomMenu"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/ic_arrow_back_black_24dp"
             android:layout_width="26dp"
-            android:layout_height="26dp"/>
+            android:layout_height="26dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/ic_arrow_back_black_24dp"
+            android:backgroundTint="@color/colorFocusBottomMenu"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/group_setting_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="그룹 설정"
             android:textColor="@color/colorFocusBottomMenu"
             android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            android:text="그룹 설정"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/button_group_setting_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/group_setting_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_gravity="center"
                 android:layout_margin="15dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/group_setting_member_isWritable"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:background="#AAAAAA"/>
+                app:layout_constraintRight_toLeftOf="@+id/group_setting_gname"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/group_setting_title_edit"
+            <TextView
+                android:id="@+id/group_setting_gname"
+                android:layout_width="wrap_content"
+                android:layout_height="64dp"
+                android:gravity="center"
+                android:textAlignment="center"
                 android:textColor="@color/colorFocusBottomMenu"
                 android:textSize="20dp"
-                android:text="그룹 이름"
-                android:layout_gravity="center"
-                android:textAlignment="center"
-                app:layout_constraintTop_toBottomOf="@+id/group_setting_image"
+                app:layout_constraintBottom_toTopOf="@+id/group_setting_member_isWritable"
                 app:layout_constraintLeft_toRightOf="@+id/group_setting_image"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/group_setting_gname_edit"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/ic_mode_edit_black_24dp"
+                app:layout_constraintBottom_toTopOf="@+id/group_setting_member_isWritable"
+                app:layout_constraintLeft_toRightOf="@+id/group_setting_gname"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/group_setting_member_isWritable"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="15dp"
-                android:paddingVertical="5dp"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
+                android:layout_marginVertical="10dp"
+                android:layout_marginRight="15dp"
+                android:gravity="center"
+                android:text="수정권한"
+                android:textAlignment="center"
+                app:layout_constraintRight_toLeftOf="@id/group_setting_member_kick_title"
+                app:layout_constraintTop_toBottomOf="@+id/group_setting_image" />
 
-                <TextView
-                    android:text="권한"
-                    android:textAlignment="center"
-                    android:layout_marginRight="15dp"
-                    app:layout_constraintRight_toLeftOf="@id/group_setting_member_kick_title"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:text="권한"
-                    android:textAlignment="center"
-                    android:id="@+id/group_setting_member_kick_title"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_width="64dp"
-                    android:layout_height="wrap_content"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/group_setting_member_kick_title"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:gravity="center"
+                android:text="추방"
+                android:textAlignment="center"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/group_setting_image" />
 
             <ListView
+                android:id="@+id/group_setting_memberList"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/group_setting_member_invite"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/group_setting_member_kick_title" />
 
             <Button
                 android:id="@+id/group_setting_member_invite"
                 style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
-                android:backgroundTint="#06F"
-                android:layout_margin="15dp"
-                android:textSize="12dp"
-                android:text="새로운 맴버 초대"
-                android:layout_gravity="center"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="128dp"
-                android:layout_height="48dp"/>
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:layout_margin="15dp"
+                android:backgroundTint="#06F"
+                android:text="새로운 맴버 초대"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toTopOf="@+id/group_setting_delete"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/group_setting_memberList" />
 
             <Button
                 android:id="@+id/group_setting_delete"
                 style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
-                android:backgroundTint="@color/colorAccent"
-                android:textSize="18dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginHorizontal="32dp"
-                android:text="그룹 삭제"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"/>
-        </LinearLayout>
+                android:layout_height="64dp"
+                android:layout_marginHorizontal="32dp"
+                android:backgroundTint="@color/colorAccent"
+                android:text="그룹 삭제"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/group_setting_member_invite" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
