--- a/app/src/main/res/layout/item_plan_list.xml
+++ b/app/src/main/res/layout/item_plan_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginVertical="5dp">
 
     <RelativeLayout
         android:id="@+id/plan_list_layout1"
@@ -70,7 +71,7 @@
         android:id="@+id/plan_list_layout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginVertical="5dp"
         android:orientation="vertical"
         android:visibility="gone">
 
@@ -124,13 +125,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/plan_list_close_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="닫기" />
     </LinearLayout>
 
 </LinearLayout>
