--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -35,18 +35,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
+    <View
         android:id="@+id/travel_group_new"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/travel_group_image"
         app:layout_constraintRight_toRightOf="parent"
         android:background="@drawable/new_alarm_style"
         android:textColor="#FFFFFF"
-        android:text="1"
-        android:textSize="14dp"
-        android:textStyle="bold"
-        android:layout_width="20dp"
-        android:layout_height="20dp"/>
+        android:layout_width="14dp"
+        android:layout_height="14dp"/>
 
     <TextView
         android:id="@+id/travel_group_date"
