그룹 초대 구현 중
사용자 초대 후 DB 적용 확인
[그룹 멤버 리스트 화면 출력, 추방, 권한 부여] 구현필요

--- a/app/src/main/res/layout/activity_group_setting.xml
+++ b/app/src/main/res/layout/activity_group_setting.xml
@@ -37,6 +37,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/button_group_setting_back"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/group_setting_ok_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:text="확인"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
