--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -46,66 +46,37 @@
             android:textAlignment="center"
             android:textColor="#fff"
             android:textSize="36sp" />
-
-        <ScrollView
+        <TextView
+            android:id="@+id/tv_lock_group_info"
+            android:text="Group Name"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="#FFF"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginHorizontal="25dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="vertical"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_lock_plan"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:text="오늘 일정"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="#FFF"
-                    android:textAlignment="center"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginHorizontal="25dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_lock_plan_today"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="25dp"/>
-                <TextView
-                    android:visibility="gone"
-                    android:id="@+id/tv_lock_plan_today_info"
-                    android:text="일정이 없습니다"
-                    android:textSize="16sp"
-                    android:textColor="#FFF"
-                    android:textAlignment="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:text="내일 일정"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="#FFF"
-                    android:textAlignment="center"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginHorizontal="25dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_lock_plan_tomorrow"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="25dp"/>
-                <TextView
-                    android:visibility="gone"
-                    android:id="@+id/tv_lock_plan_tomorrow_info"
-                    android:text="일정이 없습니다"
-                    android:textSize="16sp"
-                    android:textColor="#FFF"
-                    android:textAlignment="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-        </ScrollView>
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="25dp"/>
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/tv_lock_plan_info"
+                android:text="일정이 없습니다"
+                android:textSize="16sp"
+                android:textColor="#FFF"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
 
     <Button
