--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -19,8 +19,7 @@
             android:id="@+id/button_group_back"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:background="@drawable/ic_arrow_back_black_24dp"
-            android:backgroundTint="@color/colorFocusBottomMenu"
+            android:background="@drawable/selector_back_img"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,8 +39,7 @@
             android:id="@+id/button_group_setting"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:background="@drawable/ic_settings_black_24dp"
-            android:backgroundTint="@color/colorFocusBottomMenu"
+            android:background="@drawable/selector_setting_img"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,30 +48,43 @@
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_marginHorizontal="20dp"
-            android:background="@drawable/ic_chat_black_24dp"
-            android:backgroundTint="@color/colorFocusBottomMenu"
+            android:background="@drawable/selector_chat_img"
             app:layout_constraintRight_toLeftOf="@+id/button_group_setting"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            android:visibility="gone"
             android:id="@+id/group_chat_alarm"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:background="@drawable/round_style"
             android:textColor="#FFF"
+            android:visibility="gone"
             app:layout_constraintLeft_toRightOf="@id/button_group_chat"
             app:layout_constraintTop_toTopOf="@id/button_group_chat" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/group_main_no_plan"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:text="일정을 만들어주세요!"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/group_main_constLayout" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_all_plan"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/group_main_constLayout"
-        android:layout_marginBottom="5dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/group_main_constLayout" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_group_plan_add"
