[20.10.03] 가계부, 일정 지도 activity_layout 생성

--- a/app/src/main/res/menu/group_main_more_menu.xml
+++ b/app/src/main/res/menu/group_main_more_menu.xml
@@ -6,5 +6,8 @@
     <item
         android:id="@+id/group_main_more_main_group"
         android:title="주그룹 설정" />
+    <item
+        android:id="@+id/group_main_map"
+        android:title="일정 지도보기" />
 
 </menu>
