--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.GroupMainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/group_main_constLayout"
+        android:id="@+id/group_map_constLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="20dp"
@@ -62,6 +62,15 @@
             app:layout_constraintRight_toLeftOf="@+id/button_group_setting"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+        <Button
+            android:id="@+id/button_group_expense"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/calculator"
+            app:layout_constraintRight_toLeftOf="@+id/button_group_chat"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/group_chat_alarm"
