--- a/app/src/main/res/layout/activity_group_expense.xml
+++ b/app/src/main/res/layout/activity_group_expense.xml
@@ -56,22 +56,25 @@
         android:id="@+id/group_expense_totalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:text="총 지출액"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/group_expense_totalAmount"
         app:layout_constraintTop_toBottomOf="@+id/group_expense_constLayout" />
 
     <TextView
         android:id="@+id/group_expense_totalAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="500,000원"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="@+id/group_expense_totalText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/group_expense_totalText"
-        app:layout_constraintTop_toTopOf="@+id/group_expense_totalText" />
+        app:layout_constraintLeft_toRightOf="@+id/group_expense_totalText"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/group_expense_constLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_all_expense"
