--- a/app/src/main/res/layout/recycler_item_all_expense.xml
+++ b/app/src/main/res/layout/recycler_item_all_expense.xml
@@ -6,11 +6,11 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/all_plan_list_title"
-        android:layout_width="match_parent"
+        android:id="@+id/all_expense_list_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12월 24일"
-        android:textAlignment="center"
+        android:textColor="@color/colorExpenseDate"
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,14 +19,14 @@
         android:id="@+id/all_expense_list_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="#DDDDDD"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#000000"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/all_plan_list_title"></RelativeLayout>
+        app:layout_constraintTop_toBottomOf="@+id/all_expense_list_title"></RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_plan"
+        android:id="@+id/recyclerView_expense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="15dp"
