--- a/app/src/main/res/layout/recycler_item_expense.xml
+++ b/app/src/main/res/layout/recycler_item_expense.xml
@@ -8,24 +8,24 @@
 
 
     <TextView
-        android:id="@+id/expense_list_contents"
+        android:id="@+id/expenses_list_contents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="버스 (대중교통)"
         android:textSize="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/expense_list_price"
+        app:layout_constraintRight_toLeftOf="@+id/expenses_list_price"
         app:layout_constraintHorizontal_chainStyle="spread_inside"/>
 
     <TextView
-        android:id="@+id/expense_list_price"
+        android:id="@+id/expenses_list_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2,200원"
         android:textSize="16dp"
         android:textColor="@color/colorAccent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/expense_list_contents"
+        app:layout_constraintLeft_toRightOf="@+id/expenses_list_contents"
         app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
