[20.10.16] 가계부 작업 중

--- a/app/src/main/res/layout/activity_group_expense.xml
+++ b/app/src/main/res/layout/activity_group_expense.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="500,000원"
+        android:text="0원"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="@+id/group_expense_totalText"
         app:layout_constraintLeft_toRightOf="@+id/group_expense_totalText"
@@ -94,7 +94,8 @@
         android:id="@+id/recyclerView_all_expenses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group_expense_totalAmount" />
